# bayinx

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: create_release.yml  publish.yml  release.yml  release_and_publish.yml
src/bayinx/: __init__.py  constraints.py
src/bayinx/constraints/: __init__.py  lower.py
src/bayinx/core/: __init__.py  _constraint.py  _flow.py  _model.py  _optimization.py  _parameter.py  _variational.py  constraint.py  constraints.py  flow.py  model.py  parameter.py  utils.py  variational.py
src/bayinx/dists/: __init__.py  bernoulli.py  gamma2.py  negbinom3.py  normal.py  posnormal.py  uniform.py
src/bayinx/dists/censored/: __init__.py
src/bayinx/dists/censored/gamma2/: __init__.py  r.py
src/bayinx/dists/censored/posnormal/: __init__.py  r.py
src/bayinx/machinery/: __init__.py  diffeos.py  meanfield.py  normalizing_flow.py
src/bayinx/machinery/flows/: __init__.py  affine.py  planar.py
src/bayinx/machinery/variational/: __init__.py  meanfield.py  normalizing_flow.py  standard.py
src/bayinx/machinery/variational/flows/: __init__.py  affine.py  planar.py  radial.py  sylvester.py
src/bayinx/mhx/vi/: __init__.py  meanfield.py  normalizing_flow.py  standard.py
src/bayinx/mhx/vi/flows/: __init__.py  fullaffine.py  planar.py  radial.py  sylvester.py
tests/: test_core.py  test_predictive.py  test_variational.py
