[project]
name = "bayinx"
version = "0.2.1"
description = "Bayesian Inference with JAX"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "equinox>=0.11.12",
    "jax>=0.4.38",
    "jaxtyping>=0.2.36",
    "optax>=0.2.4",
    "pytest>=8.3.5",
    "pytest-benchmark>=5.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-q --benchmark-max-time=10 --benchmark-calibration-precision=10000 --benchmark-columns=rounds,mean,median,stddev"
